Fixed image paths and updated webpage

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		href="https://www.amazon.com/Influence-Psychology-Persuasion-Robert-Cialdini/dp/006124189X">click here.</a>
 </h2>
 <h3>Here are two photos of me:</h3>
-<img src="/Home Page in Web/images/a happy me.jpg" alt="a happy me">
-<img src="/Home Page in Web/images/a sad me.jpg" alt="a sad me">
+<img src="/Home Page in Web/images/happy_me.jpg" alt="a happy me">
+<img src="/Home Page in Web/images/sad_me.jpg" alt="a sad me">
 <h3>Fun facts about my friends:</h3>
 <ol>
 	<li>Jordan Brown - a multi-millionaire</li>
